--- a/artnoi.com/resc/style.css
+++ b/artnoi.com/resc/style.css
@@ -1,21 +1,24 @@
 @font-face {
 	font-family: 'Hack';
-	src:	url('/fonts/Hack-Regular.ttf') format('truetype');
-} 
+	src: url('/fonts/Hack-Regular.ttf') format('truetype');
+}
+
 @font-face {
 	font-family: 'Hack';
-	src:	url('/fonts/Hack-Bold.ttf') format('truetype');
+	src: url('/fonts/Hack-Bold.ttf') format('truetype');
 	font-weight: bold;
-} 
+}
+
 @font-face {
 	font-family: 'Hack';
-	src:	url('/fonts/Hack-BoldItalic.ttf') format('truetype');
+	src: url('/fonts/Hack-BoldItalic.ttf') format('truetype');
 	font-weight: bold;
 	font-style: italic;
-} 
+}
+
 @font-face {
 	font-family: 'Hack';
-	src:	url('/fonts/Hack-Italic.ttf') format('truetype');
+	src: url('/fonts/Hack-Italic.ttf') format('truetype');
 	font-style: italic;
 }
 
@@ -51,6 +54,12 @@ body {
 	max-height: 30px;
 }
 
+#navbar {
+	position: sticky;
+	top: 0;
+	background-color: #000;
+}
+
 .navbar {
 	list-style-type: none;
 	margin: 0;
@@ -58,17 +67,17 @@ body {
 	overflow: hidden;
 }
 
-.navbar > li {
+.navbar>li {
 	float: left;
 	padding-left: 0;
 	vertical-align: middle;
 }
 
-.navbar > li.f-right {
+.navbar>li.f-right {
 	float: right;
 }
 
-.navbar > li > a {
+.navbar>li>a {
 	display: inline-block;
 	text-align: center;
 	text-decoration: none;
@@ -76,15 +85,15 @@ body {
 	font-size: 20px;
 }
 
-.navbar > li:not(.f-right) > a {
+.navbar>li:not(.f-right)>a {
 	padding: 14px 14px 14px 0;
 }
 
-.navbar > li.f-right > a {
+.navbar>li.f-right>a {
 	padding: 14px 0 14px 14px;
 }
 
-.navbar > li > a:hover {
+.navbar>li>a:hover {
 	color: #c0ca8e;
 }
 
@@ -97,7 +106,11 @@ p {
 	text-align: justify;
 }
 
-p, h1, h2, h3, h4 {
+p,
+h1,
+h2,
+h3,
+h4 {
 	line-height: 1.5em;
 }
 
@@ -106,7 +119,9 @@ a {
 	text-decoration: none;
 }
 
-a:hover, a:focus, a:active {
+a:hover,
+a:focus,
+a:active {
 	text-decoration: underline;
 }
 
@@ -119,7 +134,7 @@ code {
 	color: #c0ca8e;
 }
 
-pre > code {
+pre>code {
 	font-size: 16px;
 	background: #161821;
 	display: block;
